--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>My coding quiz</title>
 </head>
 <body>
-    <div class="highscores"><a href="highscores.html">View Highscores</a></div>
+    <div class="highscores"><a rel="highscores" href="./highscores.html">View Highscores</a></div>
     <div class="timer">Time: <span id="countdown">0</span></div>
     <div class="main">
         <div id="start-menu">
